# spark-app-project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  databricks.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py  setup.py
.github/workflows/: ci.yml
configs/: dev.yaml  prod.yaml  staging.yaml
configs/databricks/: dev.yml  prod.yml  staging.yml
docs/: architecture.md  configuration.md  developer_guide.md  modules.md
scripts/: run_tests.sh  submit_job.sh
src/data_io/: readers.py  writers.py
src/io/: readers.py  writers.py
src/jobs/: base_job.py  entrypoints.py  etl_job.py
src/pipeline/: pipeline.py
src/quality/: data_quality.py
src/schemas/: schemas.py
src/transformations/: __init__.py  base_transformer.py  data_cleaner.py
src/utils/: config.py  logger.py  spark_utils.py
tests/: conftest.py
tests/integration/: test_etl_job.py
tests/unit/: test_config.py  test_data_quality.py  test_pipeline.py  test_transformations.py
