[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spark-project"
version = "1.0.0"
description = "Enterprise-grade PySpark ETL framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Data Engineering Team" }]
keywords = ["pyspark", "etl", "data-engineering", "databricks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pyspark>=3.5.0",
    "delta-spark>=3.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "great-expectations>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "chispa>=0.9.4",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests (no Spark context required)",
    "integration: Integration tests (Spark context required)",
    "slow: Tests that take more than 30 seconds",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
# fail_under retiré d'ici : le seuil de 80% est appliqué uniquement
# dans le job CI "integration-tests" (pytest tests/ --cov-fail-under=80)
# qui lance unit + integration ensemble.
# Si on le laissait ici, il bloquerait aussi les runs unit-only (~70%).
